# auto-tmux

./: README.md  TODO.md  prepare.sh  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
auto_tmux/: __init__.py  __init__.py.bak
