[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "auto-tmux"
version = "0.2.0"
description = "yet another tmux automation script that takes yaml"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",  
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dependencies = [
    "tqdm",
    "pyaml",
    "libtmux",
]
readme = "README.md"
# long_description_content_type = text/markdown
# url = "https://github.com/calacuda/auto-tmux"
# author = "Calacuda"
license = {file = "LICENSE"}
authors = [
    {name = "Calacuda"}
]
maintainers = [
    {name = "Calacuda"}
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/calacuda/auto-tmux"

[project.scripts]
auto-tmux = "auto_tmux:run_cli"
