[metadata]
name = auto-tmux
version = 0.1
description = yet another tmux automation script that takes yaml
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calacuda/auto-tmux
author = Calacuda
# author_email = ''
license = MIT License
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',  
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.11',
    ]

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    tqdm
    pyaml
    libtmux

[options.entry_points]
console_scripts =
    auto-tmux = auto_tmux:run_cli
